--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>    
     <script src="https://rawgit.com/google-ar/three.ar.js/f9603ee/dist/three.ar.js"></script>
 <!-- Master versions -->   
-    <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>    
-    <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>    
 <!-- -->
-    <script src="https://rawgit.com/chenzlabs/aframe-ar/master/dist/aframe-ar.min.js"></script>    
+    <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@aframe-1.0.x/dist/aframe-ar.min.js"></script>    
     <script src="grid-shader.js"></script>
 
     <!-- Include polygon component. -->
