--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Master versions -->   
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>    
 <!-- -->
-    <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@aframe-1.0.x/dist/aframe-ar.min.js"></script>    
+    <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@aframe-1.0.x/dist/aframe-ar.js"></script>    
     <script src="grid-shader.js"></script>
 
     <!-- Include polygon component. -->
