--- a/index.html
+++ b/index.html
@@ -187,33 +187,27 @@
           }
           
           // Show plane info on click.
-          // (may not have arDisplay until tick after loaded)
-          var ardisplay = sc.components['ar'].getSource().arDisplay;
-          if (!ardisplay) { showHUD('no ardisplay?'); } else {
-            // Old versions of WebARonARKit don't expose getPlanes() correctly.
-            var planes = ardisplay.getPlanes ? ardisplay.getPlanes() : ardisplay.anchors_;
-
-            var keys = Object.keys(sc.components['ar-planes'].planes);
-            var msg = planes.length + ' (vs. ' + keys.length + ': ' + keys.join(',') + ')\n\n';
+          var planes = sc.components['ar-planes'].getPlanes();
+          var keys = Object.keys(planes);
+          var msg = '(' + keys.length + ': ' + keys.join(',') + ')\n\n';
 /*           
-            planes.forEach(function (plane) {
-              // Decompose into pos / quat / scale, and make euler.
-              tempMat4.fromArray(plane.modelMatrix);
-              tempMat4.decompose(tempPos, tempQuat, tempScale);
-              tempEuler.setFromQuaternion(tempQuat);
+          planes.forEach(function (plane) {
+            // Decompose into pos / quat / scale, and make euler.
+            tempMat4.fromArray(plane.modelMatrix);
+            tempMat4.decompose(tempPos, tempQuat, tempScale);
+            tempEuler.setFromQuaternion(tempQuat);
 
-              // Write out what we got, for debugging.
-              msg += 
-              'identifier: ' + plane.identifier + '' + // string, per latest spec
-              ' ' + JSON.stringify(tempPos) + ''
-              ' ' + JSON.stringify(tempEuler.toVector3().multiplyScalar(THREE.Math.RAD2DEG)) + '' + 
-              ' ' + plane.extent + '\n' + // number[2], per latest spec
-              (plane.vertices ? ('vertices: ' + plane.vertices.length + '\n') : '') + // number[3*n], per latest spec
-              '';
-            });
+            // Write out what we got, for debugging.
+            msg += 
+            'identifier: ' + plane.identifier + '' + // string, per latest spec
+            ' ' + JSON.stringify(tempPos) + ''
+            ' ' + JSON.stringify(tempEuler.toVector3().multiplyScalar(THREE.Math.RAD2DEG)) + '' + 
+            ' ' + plane.extent + '\n' + // number[2], per latest spec
+            (plane.vertices ? ('vertices: ' + plane.vertices.length + '\n') : '') + // number[3*n], per latest spec
+            '';
+          });
 */            
-            showHUD(msg);
-          }
+          showHUD(msg);
         });
         
         addEventListeners();
