--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>aframe-ar-plane</title>
     <meta name="description" content="aframe-ar-plane">
     <!-- First, include whichever version of A-Frame you like. -->
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>    
+		<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@e47f441/dist/aframe-master.min.js"></script>
     <!-- Last, include aframe-ar. -->
-    <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@4c947c6/dist/aframe-ar.js"></script>    
+    <script src="https://ghcdn.rawgit.org/chenzlabs/aframe-ar/v0.3.0/dist/aframe-ar.min.js"></script>
     
     <!-- Include grid shader. -->
     <script src="grid-shader.js"></script>
